Snippets/Chat Bar Context Menu/ChatContextMenuSource.css
/*Textarea Patch*/
.channelTextArea_f75fb0 .scrollableContainer__74017 {
  overflow: visible;
}
.channelTextArea_f75fb0 .textArea__74017 {
  grid-area: textArea;
  height: unset !important;
  > div {
    max-height: 144px;
    overflow: hidden scroll;
    &::-webkit-scrollbar {
      width: 12px;
      height: 12px
    }
    &::-webkit-scrollbar-thumb, &::-webkit-scrollbar-track {
      background-clip: padding-box;
      border: 4px solid transparent
    }
    &::-webkit-scrollbar-thumb {
      background-color: hsl(var(--primary-800-hsl)/.6);
      border-radius: 8px
    }
  }
}

/*More Button*/
.channelTextArea_f75fb0:not(.channelTextAreaDisabled__74017) .inner__74017 {
  padding-right: 12px;
  pointer-events: none;
  > div {
    pointer-events: all;
  }
  &:before {
    background-color: var(--interactive-normal);
    content: "";
    position: absolute;
    top: 12px;
    inset-inline: calc(100% - 44px);
    height: var(--space-32);
    width: var(--space-32);
    pointer-events: none;
    transition-duration: .2s;
    mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='none' viewBox='0 0 24 24'%3E%3Cpath fill='currentColor' fill-rule='evenodd' d='M4 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm10-2a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm8 0a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z' clip-rule='evenodd' class=''/%3E%3C/svg%3E") no-repeat center/20px;
    z-index: 1;
  }
  &:after {
    content: "";
    display: block;
    cursor: pointer;
    border-radius: 8px;
    height: var(--space-32);
    margin-top: 12px;
    min-height: var(--space-32);
    min-width: var(--space-32);
    pointer-events: all;
    transition-duration: .2s;
  }
}
.channelTextArea_f75fb0 .inner__74017:hover:not(:has(:hover)) {
  &:before {
    background-color: var(--icon-primary);
  }
  &:after {
    background-color: var(--background-modifier-selected);
  }
}

/*Context Menu*/
.channelTextArea_f75fb0 .buttons__74017 {
  position: absolute;
  background: var(--background-surface-high);
  background-color: var(--background-surface-higher);
  border: 1px solid var(--border-subtle);
  border-radius: 8px;
  box-shadow: var(--shadow-high);
  box-sizing: border-box;
  flex-direction: column;
  height: fit-content;
  gap: 0;
  min-width: 200px;
  visibility: hidden;
  padding: 8px;
  transition-delay: 99999s;
  top: unset;
  bottom: calc(100% - 4px);
  right: 12px;
  z-index: 0;
  > div {
    width: 100%;
  }
}
.custom-theme-background .channelTextArea_f75fb0 .buttons__74017 {
  border-color: var(--border-strong);
}
.inner__74017:active:not(:has(:hover)) .buttons__74017 {
  visibility: visible;
  pointer-events: all;
  transition-delay: 0s;
}
body:active:not(:has(.inner__74017:hover,.buttons__74017:hover)) .channelTextArea_f75fb0 .buttons__74017 {
  display: none;
  pointer-events: none;
  transition-delay: 0s;
}
/*Context Buttons*/
.buttonContainer_e6e74f {
  width: 100%;
  background: none !important;
}
.channelTextArea_f75fb0 .button__74017, .button_e6e74f {
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--header-primary);
  justify-content: left;
  flex: 1 1 auto;
  padding: 8px;
  transition: none;
  &:hover {
    background: var(--background-mod-subtle);
  }
  &:after {
    content: attr(aria-label);
    font-size: 14px;
    font-weight: var(--font-weight-medium);
    line-height: 18px;
    -webkit-margin-start: 8px;
    margin-inline-start: 8px;
  }
  .lottieIcon__5eb9b, .iconContainer_c0c49a {
    width: 24px !important;
    height: 24px !important;
  }
  .spriteContainer__04eed {
    --custom-emoji-sprite-size: 24px !important;
  }
  .spriteGreyscale__04eed {
    background-color: var(--header-primary);
  }
}
.separator_aa63ab, .container_aa63ab {
  display: none;
}

